# APatchAPM

./: .gitignore  CMakeLists.txt  build.sh  clear.sh  compile_hook.sh  setup.sh
cmake/: ZygiskModule.cmake
modules/: README.md
modules/appxray/: README.md
modules/appxray/magisk/: customize.sh  module.prop
modules/appxray/native/: CMakeLists.txt  java_hook.cpp  main.cpp  native_hook.cpp  native_hook.h
modules/appxray/ui/: README.md
modules/appxray/ui/app/src/main/java/com/example/sample/settings/: ConfigStore.java  DlMonitorFragment.java  MainActivity.java  MainPagerAdapter.java  OptionsFragment.java  SharedViewModel.java
modules/appxray/ui/app/src/main/res/layout/: activity_main.xml  fragment_dl_monitor.xml  fragment_options.xml
modules/appxray/ui/app/src/main/res/values/: strings.xml
modules/appxray/ui/release/: output-metadata.json
modules/appxray/ui/release/baselineProfiles/0/: app-release.dm
modules/appxray/ui/release/baselineProfiles/1/: app-release.dm
modules/dumpdex/: README.md
modules/dumpdex/magisk/: customize.sh  module.prop
modules/dumpdex/native/: CMakeLists.txt  dumpdex_hook.cpp  dumpdex_hook.h  main.cpp
modules/dumpdex/ui/: README.md  build.gradle
modules/dumpdex/ui/app/: build.gradle
modules/dumpdex/ui/app/release/baselineProfiles/0/: app-release.dm
modules/dumpdex/ui/app/release/baselineProfiles/1/: app-release.dm
modules/dumpdex/ui/app/src/main/: AndroidManifest.xml
modules/dumpdex/ui/app/src/main/java/com/example/sample/settings/: AppsAdapter.java  AppsFragment.java  ConfigStore.java  MainActivity.java  MainPagerAdapter.java  OptionsFragment.java  RootShell.java  SharedViewModel.java
modules/dumpdex/ui/app/src/main/res/layout/: activity_main.xml  fragment_options.xml
modules/dumpdex/ui/app/src/main/res/values/: strings.xml
modules/dumpdex/ui/release/: output-metadata.json
modules/dumpdex/ui/release/baselineProfiles/0/: app-release.dm
modules/dumpdex/ui/release/baselineProfiles/1/: app-release.dm
modules/dumpso/magisk/: module.prop
modules/dumpso/native/: CMakeLists.txt  dumpso_dump.cpp  dumpso_dump.h  dumpso_enum.cpp  dumpso_enum.h  dumpso_hook.cpp  dumpso_hook.h  export.map  main.cpp  native_hook.cpp
modules/dumpso/native/SoFixer/: ElfReader.cpp  ElfReader.h  ElfRebuilder.cpp  ElfRebuilder.h  FDebug.h  FileReader.h  ObElfReader.cpp  ObElfReader.h  macros.h
modules/dumpso/ui/: README.md
modules/dumpso/ui/app/: build.gradle
modules/dumpso/ui/app/src/main/: AndroidManifest.xml
modules/dumpso/ui/app/src/main/java/com/example/sample/settings/: AppsAdapter.java  AppsFragment.java  ConfigStore.java  MainActivity.java  RootShell.java  (+3 more)
modules/dumpso/ui/app/src/main/res/layout/: activity_main.xml  fragment_apps.xml  fragment_options.xml
modules/dumpso/ui/app/src/main/res/values/: strings.xml
modules/dumpso/ui/release/baselineProfiles/0/: app-release.dm
modules/envcloak/: README.md
modules/envcloak/java/: Hooker.java
modules/envcloak/magisk/: customize.sh  module.prop
modules/envcloak/native/: CMakeLists.txt  config.cpp  config.h  elf_util.cpp  elf_util.h  java_hook.cpp  java_hook.h  main.cpp  native_hook.cpp  native_hook.h
modules/envcloak/ui/: README.md  build.gradle  gradlew  settings.gradle
modules/envcloak/ui/app/: build.gradle
modules/envcloak/ui/app/release/: output-metadata.json
modules/envcloak/ui/app/release/baselineProfiles/0/: app-release.dm
modules/envcloak/ui/app/release/baselineProfiles/1/: app-release.dm
modules/envcloak/ui/app/src/main/: AndroidManifest.xml
modules/envcloak/ui/app/src/main/java/com/apm/envcloak/: AppsAdapter.java  AppsFragment.java  ConfigStore.java  HideDevFragment.java  InstallerSpoofFragment.java  MainActivity.java  MainPagerAdapter.java  RootShell.java  SharedViewModel.java
modules/envcloak/ui/app/src/main/res/layout/: activity_main.xml  fragment_hide_dev.xml  fragment_installer_spoof.xml  item_app.xml
modules/envcloak/ui/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
modules/nohook/native/: CMakeLists.txt  java_hook.h  native_hook.h
modules/nohook/ui/app/release/baselineProfiles/1/: app-release.dm
modules/nohook/ui/app/src/main/res/layout/: item_app.xml
modules/sample/: README.md
modules/sample/java/: Hooker.java
modules/sample/magisk/: customize.sh  module.prop
modules/sample/native/: CMakeLists.txt  java_hook.cpp  main.cpp  native_hook.cpp  native_hook.h
modules/sample/ui/: README.md
modules/sample/ui/app/release/baselineProfiles/0/: app-release.dm
modules/sample/ui/app/release/baselineProfiles/1/: app-release.dm
modules/sample/ui/app/src/main/res/layout/: fragment_options.xml  item_app.xml
modules/sample/ui/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
modules/shadowso/: README.md
modules/shadowso/java/: Hooker.java
modules/shadowso/magisk/: module.prop
modules/shadowso/native/: CMakeLists.txt  dladdr_hook.cpp  dladdr_hook.h  elf_util.cpp  elf_util.h  java_hook.cpp  java_hook.h  main.cpp  maps_hook.cpp  maps_hook.h  native_hook.cpp  native_hook.h  phdr_hook.cpp  phdr_hook.h  shadow_loader.cpp  shadow_loader.h
modules/shadowso/ui/: README.md  gradle.properties  settings.gradle
modules/shadowso/ui/app/: build.gradle
modules/shadowso/ui/app/release/baselineProfiles/0/: app-release.dm
modules/shadowso/ui/app/src/main/: AndroidManifest.xml
modules/shadowso/ui/app/src/main/java/com/apm/shadowso/: AppsAdapter.java  AppsFragment.java  ConfigStore.java  MainActivity.java  MainPagerAdapter.java  OptionsFragment.java  RootShell.java  SharedViewModel.java
modules/shadowso/ui/app/src/main/res/layout/: fragment_apps.xml  fragment_options.xml
modules/shadowso/ui/app/src/main/res/values/: strings.xml
(+13 files in other folders)
